navbar z-index fixed

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "Lato";
+    font-family: 'Lato';
 
     body {
         box-sizing: border-box;
@@ -137,6 +137,7 @@
         width: 100%;
         flex-direction: column;
         align-items: flex-start;
+        position: fixed;
 
     }
 
@@ -200,23 +201,24 @@
 
 
     .hero-section {
-        margin: auto;
-        position: absolute;
-        top: 52%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
         color: white;
-        text-align: center;
+        height: 75vh;
+        
+        
 
     }
 
     .hero-header {
-        font-size: 2.5rem;
+        font-size: 3.5rem;
 
     }
 
     .hero-text {
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
 }
 
@@ -273,7 +275,8 @@
         align-items: center;
         background-color: rgba(0, 0, 0, 0.7);
         color: white;
-        position: sticky;
+        position: fixed;
+        width: 100vw;
 
     }
 
@@ -331,11 +334,13 @@
     }
 
     .hero-header {
-        font-size: 2.5rem;
+        font-size: 3.5rem;
 
     }
 
     .hero-text {
         font-size: 2rem;
+        border-bottom: solid 3px;
+        
     }
 }
